--- a/detail-recipe.html
+++ b/detail-recipe.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="mt-3 d-grid">
                   <button type="button" class="btn btn-warning btn-lg">
-                    <a href="#"><img src="/assets/icon/play.svg" alt="" /></a>
+                    <a href="./detail-video-recipe.html"><img src="/assets/icon/play.svg" alt="" /></a>
                   </button>
                 </div>
                 <div class="mt-3 d-grid">
