fix responsive & performance

--- a/profile.html
+++ b/profile.html
@@ -73,9 +73,52 @@
                     My Recipe
                   </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body row">
+                  <div class="row row-cols-1 row-cols-lg-3 g-4">
+                      <div class="col">
+                        <div class="recipesContainer">
+                          <span
+                            class={style.deleteIcon}
+                          
+                          >
+                            <FaTrash />
+                          </span>
+                          <img
+                            src="assets/img/img1.svg"
+                            alt="myrecipe"
+                            class="recipes"
+                          />
+                          <h1 class="foodName">
+                            Sandwich With Egg
+                          </h1>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="recipesContainer">
+                          <span
+                            class={style.deleteIcon}
+                          
+                          >
+                            <FaTrash />
+                          </span>
+                          <img
+                            src="assets/img/img1.svg"
+                            alt="myrecipe"
+                            class="recipes"
+                          />
+                          <h1 class="foodName">
+                            Sandwich With Egg
+                          </h1>
+                        </div>
+                      </div>
+                  </div>
                 </div>
+              </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
