--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@
                   </p>
                 </div>
                 <div class="button">
+                  <a href="detail-recipe.html">
                   <button
                     type="button"
                     class="btn btn-warning text-light px-5 py-3"
                   >
                     Learn More
                   </button>
+                </a>
                 </div>
               </div>
             </section>
